--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # Server Configuration
-server.port=8080
+#server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/hoteldb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=mysqloii
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:hoteldb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
@@ -22,6 +22,4 @@ logging.level.com.hmshk=DEBUG
 
 # Load sample data from data.sql
 spring.jpa.defer-datasource-initialization=true
-
-
 spring.sql.init.mode=always
