--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hoteldb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mysqloii
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
